--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://mazhuang.org
+url: https://gitname21.github.io/jekyll_demo/
 date_format: "ordinal"
 title: 码志
 subtitle: "打码改变人生"
