modified:_config.yml>title

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://gitname21.github.io/jekyll_demo/
 date_format: "ordinal"
-title: 码志
+title: Bruce Lin
 subtitle: "打码改变人生"
 description: "马壮的个人博客"
 keywords: 码志, Zhuang Ma, mzlogin, mazhuang
