modified:_config.yml>description

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://gitname21.github.io/jekyll_demo/
 date_format: "ordinal"
 title: Bruce Lin
-subtitle: "打码改变人生"
+subtitle: "人往高处走"
 description: "马壮的个人博客"
 keywords: 码志, Zhuang Ma, mzlogin, mazhuang
 timezone: Asia/Shanghai
