modified:_config.yml>location

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author: Zhuang Ma
 organization: zkh360.com
 organization_url: http://www.zkh360.com
 github_username: mzlogin
-location: Wuhan, China
+location: 广东省湛江市海洋大学
 email: chumpma@gmail.com
 
 # ---------------- #
