modified:_config.yml>email

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ organization: zkh360.com
 organization_url: http://www.zkh360.com
 github_username: mzlogin
 location: 广东省湛江市海洋大学
-email: chumpma@gmail.com
+email: qq915519469@gmail.com
 
 # ---------------- #
 #    Navigation    #
