--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,9 +1,13 @@
 - name: Software Engineer Keywords
   keywords:
-      - Java
-      - C++
-      - Python
-      - Design Patterns
+      - Photoshop
+      - Auto cad
+      - javascript
+      - php
+      - jQuery
+      - vue
+      - 平面设计
+      - 网站开发
 
 - name: Mobile Developer Keywords
   keywords:
