--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,10 @@ navs:
   -
     href: /about/
     label: 关于
+    
+  -
+    href: /work/
+    label: 作业
 
 # ---------------- #
 #       RSS        #
